--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -42,23 +42,27 @@
 			{% comment %} End main section {% endcomment %} 
 
 
-    
+    <u>
+        <h2 class="text-center mb-4">Use cases</h2>
+    </u>
 
-            <div class="row col-10 mx-auto">
-                <div class="col-xl-6">
-                    <a href="{% url 'customer_survey' %}">
+            <div class="row w-90 mx-auto justify-content-center d-flex">
+
+                
+                <a href="{% url 'customer_survey' %}">
+                <div class="col-xl-4 col-lg-6 col-md-6">
                     <div class="card text-center border border-3 border-dark">
                         <div class="card-body">
 
-                            <p class="card-text">Create the perfect customer survey with fully customizable quizElements. Fully-white labelled.</p>
+                            <p class="card-text">Create the perfect customer survey with fully customizable quizElements.</p>
                             <a href="javascript:void()" class="btn btn-primary site-secondary-button my-3">Customer surveys</a>
                         </div>
                        
                     </div>
-                    </a>
-
                 </div>
-                <div class="col-xl-6">
+            </a>
+                
+                <div class="col-xl-4 col-lg-6 col-md-6">
                     <a href="{% url 'lead_capture' %}">
                     <div class="card text-center border border-3 border-dark">
                         <div class="card-body">
@@ -69,9 +73,46 @@
                     
                     </div>
                     </a>
-
                 </div>
-           
+                
+                <div class="col-xl-4 col-lg-6 col-md-6">
+                    <a href="{% url 'lead_capture' %}">
+                    <div class="card text-center border border-3 border-dark">
+                        <div class="card-body">
+
+                            <p class="card-text">Create exit interview surveys easily and discover actionable insights.</p>
+                            <a href="javascript:void()" class="btn btn-primary site-secondary-button my-3">Exit interview surveys</a>
+                        </div>
+                    
+                    </div>
+                    </a>
+                </div>
+                <div class="col-xl-4 col-lg-6 col-md-6">
+                    <a href="{% url 'lead_capture' %}">
+                    <div class="card text-center border border-3 border-dark">
+                        <div class="card-body">
+
+                            <p class="card-text">Pre and post event feedback surveys have never been easier includes QR code link.</p>
+                            <a href="javascript:void()" class="btn btn-primary site-secondary-button my-3">Event feedback surveys</a>
+                        </div>
+                    
+                    </div>
+                    </a>
+                </div>
+
+                <div class="col-xl-4 col-lg-6 col-md-6">
+                    <a href="{% url 'lead_capture' %}">
+                    <div class="card text-center border border-3 border-dark">
+                        <div class="card-body">
+
+                            <p class="card-text">Student union surveys have never been easier to create and generate responses.</p>
+                            <a href="javascript:void()" class="btn btn-primary site-secondary-button my-3">Student union surveys</a>
+                        </div>
+                    
+                    </div>
+                    </a>
+                </div>
+
             </div>
 
 
