--- a/src/templates/home_site2/landing_pages/customer_survey.html
+++ b/src/templates/home_site2/landing_pages/customer_survey.html
@@ -47,17 +47,15 @@
 			{% comment %} End main section {% endcomment %} 
 
 
-    
-
     <div class="row my-5">
         <div class="col-lg-4">
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
             </div>
-            <h2 class="text-center">10+ quizElements™</h2>
+            <h2 class="text-center">12+ quizElements™</h2>
             <div class="img-fluid mx-auto justify-content-center d-flex">
                 <img src="{% static 'images/elements.png' %}" alt="" class="">
             </div>
-            <p>Create your survey the way ypu want with ease.</p>
+            <p>Create your survey the way you want with ease.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
@@ -82,13 +80,7 @@
         </div><!-- /.col-lg-4 -->
     </div>
 
-    <div class="row p-3 ">
-        <h2>Example quiz</h2>        
-        {% autoescape off %}
-        
-        <iframe src="https://www.quizelements.com/render_quiz/take_quiz/2/" title="example quiz" width="100%" height="800px"></iframe> 
-        {% endautoescape %}
-    </div>
+    
 
     <div class="row" >
         <div class="bootstrap-media w-100">
@@ -178,8 +170,119 @@
             </ul>
         </div>
     </div>
+<hr>
+    
+    {% include 'home_site2/landing_pages/includes/features_list.html' %}
 
 
 
+    <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+    </div>
+    <div class="row my-3">
+        <h2>Why customer surveys are important</h2>
+        <p>
+            Customer surveys are important because they help you understand your customers’ needs, preferences, satisfaction and loyalty. They also help you identify opportunities to improve your products, services and customer experience. By conducting customer surveys, you can measure your performance against your competitors, develop brand loyalty, prevent negative word-of-mouth, and keep up with changing consumer tastes. Customer surveys are an essential tool for brand building, dashboard analytics and crucial decision-making
+        </p>
+    </div>
+
+
+    <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+    </div>    
+    <div class="row my-3">
+        <h2>How can I create a good customer survey</h2>
+        <p>
+            <b>
+                Define your survey goal.
+            </b>
+             What do you want to learn from your customers? How will you use the feedback to improve your business? Your goal should be clear, specific and measurable.
+            <br><br>
+            <b>
+                Send your survey to the right audience.
+            </b>
+             Who are your target customers? How can you reach them effectively? You should use relevant channels, such as email, SMS, social media or QR codes, to distribute your survey. You should also consider the timing and frequency of your survey invitations.
+            <br><br>
+            <b>
+                Ask the right questions in your survey.
+            </b>
+             What are the key aspects of your customer experience that you want to measure? How can you phrase your questions in a clear, unbiased and simple way? You should use a variety of question types, such as rating scales, multiple choice, open-ended or matrix questions, to collect different types of data. You should also avoid asking leading, ambiguous or double-barreled questions that might confuse or influence your respondents.
+            <br><br>
+            <b>
+                Keep your survey short. 
+            </b>            
+            How long will it take your customers to complete your survey? How can you reduce the number of questions without compromising the quality of your data? You should aim to keep your survey as concise as possible, ideally no more than 10 questions. 
+            <br><br> 
+            <b>
+                Offer incentives.
+            </b>
+                How can you motivate your customers to take your survey? How can you reward them for their time and feedback? You should consider offering incentives, such as discounts, coupons, freebies or loyalty points, to increase your response rate and show appreciation for your customers. You should also make sure that your incentives are relevant, attractive and ethical.
+            <br><br>
+            <b>
+                Always follow up.
+            </b>
+                 How can you thank your customers for taking your survey? How can you show them that you value their feedback and act on it? You should always send a thank-you message to your respondents after they complete your survey. You should also share the results of your survey with them and let them know what changes or improvements you have made based on their feedback.
+            <br>
+        </p>
+    </div>
+    
+    <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+    </div>
+    <div class="row my-3">
+        <h3>Examples of customer survey questions</h3>
+        <p>
+            <ol>
+                <li>What’s your most important priority when XYZ?</li>
+                <li>How likely are you to recommend (insert product or service) to others? (a.k.a Net promoter score)</li>
+                <li>How can we improve (insert product or service) for you?</li>
+                <li>What did you like most about (insert product or service)? </li>
+            </ol>
+    
+        </p>
+    </div>
+
+    
+    <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+    </div>
+
+    <div class="row my-3">
+        <h3>
+            Writing a customer survey goal
+        </h3>
+
+        <p>
+
+            A customer survey goal is a clear and specific statement of what you want to learn from your survey. It should be aligned with your business objectives and customer needs. Here are some steps to write a customer survey goal:
+
+            <br>
+            <br>
+            <ul>
+                <li>
+
+                    Identify the problem or opportunity. What is the main challenge or opportunity that you want to address with your survey? For example, do you want to improve customer retention, increase customer satisfaction, or launch a new product?
+                </li>
+                <br>
+                <li>
+
+                    Define the scope and audience. Who are the customers that you want to survey and what aspects of their experience do you want to measure? For example, do you want to survey all your customers or a specific segment? Do you want to focus on their overall satisfaction or a specific touchpoint?
+                </li>
+                <br>
+                <li>
+
+                    Formulate a research question. What is the main question that you want to answer with your survey? For example, how satisfied are your customers with your product? What are the factors that influence their loyalty? How do they perceive your brand compared to your competitors?
+                </li>
+                <br>
+                <li>
+
+                    Write a SMART goal. SMART stands for Specific, Measurable, Achievable, Relevant, and Time-bound. A SMART goal is a concise and realistic statement of what you want to achieve with your survey. For example, increase customer satisfaction by 10% in the next quarter by identifying and addressing the main pain points of our customers.
+                </li>
+                <br>
+                I hope this helps you write a customer survey goal.😊
+                
+            </ul>
+            </p>
+    </div>
+
+
+
+{% include 'home_site2/landing_pages/includes/example_quiz.html' %}
 
 {% endblock content %}
