--- a/src/templates/home_site2/landing_pages/lead_capture.html
+++ b/src/templates/home_site2/landing_pages/lead_capture.html
@@ -7,7 +7,7 @@
 		<!--**********************************
             Content body start
         ***********************************-->
-    <title>Lead capture - {{site.site_name}}  </title>
+    <title>Lead capture with quizes and surveys - {{site.site_name}}  </title>
 
 			<!-- ============================================================== -->
 			<!-- Start right Content here -->
@@ -21,7 +21,7 @@
         <div class="col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3">
 
-                Capture leads with quizElements
+                Lead capture with quizElements
 
             </h1>
             <h2 class="lead fs-3">
@@ -53,11 +53,11 @@
         <div class="col-lg-4">
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
             </div>
-            <h2 class="text-center">10+ quizElements™</h2>
+            <h2 class="text-center">12+ quizElements™</h2>
             <div class="img-fluid mx-auto justify-content-center d-flex">
                 <img src="{% static 'images/elements.png' %}" alt="" class="">
             </div>
-            <p>Create your lead capture form the way ypu want with ease.</p>
+            <p>Create your survey the way you want with ease.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
@@ -74,21 +74,15 @@
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
             </div>
 
-            <h2 class="text-center">Conversion tracking</h2>
+            <h2 class="text-center">Facebook/Tiktok/Google</h2>
             <div class="img-fluid mx-auto justify-content-center d-flex">
                 <img src="{% static 'images/unlimited.png' %}" alt="" class="">
             </div>
-            <p>Track conversions via Facebook or tiktok API/pixels. Fully-integrated with both. Want to add custom analytic code? You can easily do so</p>
+            <p>Fully integrated with Facebook and Tiktok conversion API. Easily add google analytics and custom scripts.</p>
         </div><!-- /.col-lg-4 -->
     </div>
 
-    <div class="row p-3 ">
-        <h2>Example quiz</h2>        
-        {% autoescape off %}
-        
-        <iframe src="https://www.quizelements.com/render_quiz/take_quiz/2/" title="example quiz" width="100%" height="800px"></iframe> 
-        {% endautoescape %}
-    </div>
+    
 
     <div class="row" >
         <div class="bootstrap-media w-100">
@@ -108,7 +102,7 @@
                             <ul class="list-group">
 
                                 <li class="list-group-item">
-                                    With over 12+ elements to choose from easily create the perfect lead capture form
+                                    With over 10+ elements to choose from easily create the perfect customer survey
                                 </li class="list-group-item">
 
                                 <li class="list-group-item">
@@ -133,18 +127,17 @@
                     <div class="media-body">
                         <p class="mb-0 display-4">
                             <ul class="list-group">
-
                                 <li class="list-group-item">
-                                   Send your form to others via a shareable link
-                                </li class="list-group-item">
-
-                                <li class="list-group-item">
-                                    Embed your lead capture form into your website
-                                </li class="list-group-item">
-
-                                <li class="list-group-item">
-                                    Share a QR code link to your form
-                                </li class="list-group-item">
+                                    Send your form to others via a shareable link
+                                 </li class="list-group-item">
+ 
+                                 <li class="list-group-item">
+                                     Embed your lead capture form into your website
+                                 </li class="list-group-item">
+ 
+                                 <li class="list-group-item">
+                                     Share a QR code link to your form
+                                 </li class="list-group-item">
                                 
                                 
                             </ul>
@@ -179,8 +172,58 @@
             </ul>
         </div>
     </div>
+<hr>
+    
+    {% include 'home_site2/landing_pages/includes/features_list.html' %}
 
 
 
+    <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+    </div>
+    <div class="row my-3">
+        <h2>Quiz funnel lead generation</h2>
+        <p>
+            Quiz funnel lead generation is a strategy that uses online quizzes to attract and qualify leads for your business. A quiz funnel typically consists of the following steps:
+<br>
+        <br>    You create a quiz that is relevant to your niche, audience, and offer. The quiz should be engaging, informative, and personalized.
+            <br><br>You drive traffic to your quiz from various sources, such as your website, social media, email, or ads.
+            <br><br>You ask for the quiz taker’s email address before or after showing them their results. This way, you can capture their contact information and segment them based on their answers.
+            <br><br>You follow up with your leads via email or other channels, providing them with valuable content, product recommendations, and offers that match their quiz results and interests.
+            <br><br>Quiz funnel lead generation can help you generate more leads, increase conversions, and grow your business.        </p>
+    </div>
+
+    <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
+    </div>
+    <div class="row my-3">
+        <h3>Benefits of quizElements for lead generation</h3>
+        <p>
+            <ul class="ml-5">
+                <b>
+    
+                    Some of the benefits of using quizzes for lead generation are:
+                </b>
+                <li>
+                    Increased engagement and interaction with target audience: Quizzes are a fun and interactive way to grab the attention of your potential customers and keep them engaged with your brand. Quizzes can also encourage social sharing and word-
+                    of mouth marketing.
+                </li>
+                <br>
+
+                <li>Collection of valuable lead information: Quizzes can help you capture the contact information and segment your leads based on their answers. This can help you create a database of leads for your business and follow up with them via email or other channels.</li>
+                <br><li>Boost in brand awareness and recognition: Quizzes can help you raise awareness of your brand and generate buzz. Quizzes can also showcase your expertise and authority in your niche, and build trust and credibility with your potential customers.</li>
+                <br><li>Improved customer experience and satisfaction: Quizzes can help you provide a unique and enjoyable experience for your target audience, and deliver personalized and relevant content, product recommendations, and offers based on their quiz results. This can help you improve customer satisfaction and loyalty.</li>
+                <br><li>Increased conversions and sales: Quizzes can help you increase conversions and sales by generating qualified leads, providing personalized solutions, and creating a sense of urgency or scarcity. Quizzes can also help you reduce cart abandonment and increase repeat purchases.</li>
+                <br><li>Cost-effective method of lead generation: Quizzes can help you generate leads at a lower cost than other methods, such as paid ads or cold calling. Quizzes can also help you optimize your marketing budget by targeting only the most relevant and interested.</li>
+            </ul>
+               
+        </p>
+    </div>
+
+ 
+
+  
+
+
+
+{% include 'home_site2/landing_pages/includes/example_quiz.html' %}
 
 {% endblock content %}
