Create landing pages

--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -76,7 +76,7 @@
                 </div>
                 
                 <div class="col-xl-4 col-lg-6 col-md-6">
-                    <a href="{% url 'lead_capture' %}">
+                    <a href="{% url 'exit_interview_surveys' %}">
                     <div class="card text-center border border-3 border-dark">
                         <div class="card-body">
 
@@ -88,7 +88,7 @@
                     </a>
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-6">
-                    <a href="{% url 'lead_capture' %}">
+                    <a href="{% url 'event_surveys' %}">
                     <div class="card text-center border border-3 border-dark">
                         <div class="card-body">
 
@@ -100,20 +100,7 @@
                     </a>
                 </div>
 
-                <div class="col-xl-4 col-lg-6 col-md-6">
-                    <a href="{% url 'lead_capture' %}">
-                    <div class="card text-center border border-3 border-dark">
-                        <div class="card-body">
-
-                            <p class="card-text">Student union surveys have never been easier to create and generate responses.</p>
-                            <a href="javascript:void()" class="btn btn-primary site-secondary-button my-3">Student union surveys</a>
-                        </div>
-                    
-                    </div>
-                    </a>
-                </div>
-
-            </div>
+         
 
 
 
