--- a/src/templates/home_site2/landing_pages/exit_interview_surveys.html
+++ b/src/templates/home_site2/landing_pages/exit_interview_surveys.html
@@ -7,7 +7,7 @@
 		<!--**********************************
             Content body start
         ***********************************-->
-    <title>Lead capture with quizes and surveys - {{site.site_name}}  </title>
+    <title>Exit interview surveys - {{site.site_name}}  </title>
 
 			<!-- ============================================================== -->
 			<!-- Start right Content here -->
@@ -21,7 +21,7 @@
         <div class="col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3">
 
-                Lead capture with quizElements
+                Exit interview surveys with  quizElements
 
             </h1>
             <h2 class="lead fs-3">
@@ -74,11 +74,11 @@
             <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
             </div>
 
-            <h2 class="text-center">Facebook/Tiktok/Google</h2>
+            <h2 class="text-center">Analyze results</h2>
             <div class="img-fluid mx-auto justify-content-center d-flex">
                 <img src="{% static 'images/unlimited.png' %}" alt="" class="">
             </div>
-            <p>Fully integrated with Facebook and Tiktok conversion API. Easily add google analytics and custom scripts.</p>
+            <p>Gain actionable insights with a question by question breakdown with graphs</p>
         </div><!-- /.col-lg-4 -->
     </div>
 
@@ -102,7 +102,7 @@
                             <ul class="list-group">
 
                                 <li class="list-group-item">
-                                    With over 10+ elements to choose from easily create the perfect lead capture form
+                                    With over 10+ elements to choose from easily create the perfect exit interview survey
                                 </li class="list-group-item">
 
                                 <li class="list-group-item">
@@ -154,7 +154,7 @@
                             <ul class="list-group">
 
                                 <li class="list-group-item">
-                                    View each response including partially completed responses
+                                    View each survey response including partially completed responses
                                 </li class="list-group-item">
 
                                 <li class="list-group-item">
@@ -181,45 +181,62 @@
     <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
     </div>
     <div class="row my-3">
-        <h2>Quiz funnel lead generation</h2>
+        <h2>Exit interview survey importance</h2>
         <p>
-            Quiz funnel lead generation is a strategy that uses online quizzes to attract and qualify leads for your business. A quiz funnel typically consists of the following steps:
-<br>
-        <br>    You create a quiz that is relevant to your niche, audience, and offer. The quiz should be engaging, informative, and personalized.
-            <br><br>You drive traffic to your quiz from various sources, such as your website, social media, email, or ads.
-            <br><br>You ask for the quiz taker’s email address before or after showing them their results. This way, you can capture their contact information and segment them based on their answers.
-            <br><br>You follow up with your leads via email or other channels, providing them with valuable content, product recommendations, and offers that match their quiz results and interests.
-            <br><br>Quiz funnel lead generation can help you generate more leads, increase conversions, and grow your business.        </p>
+            Exit interview surveys are a powerful tool for retention and improvement in organizations. <br> They can help you understand why employees stay, why they leave, and how the organization needs to change1. <br> They can also reveal hidden challenges and opportunities, generate competitive intelligence, and promote engagement and appreciation. <br> Exit interview surveys can help you identify potential retention issues before they lead to people leaving, and analyze trends and patterns by demographic, tenure, performance, and roles. <br>
+             They can also turn departing employees into corporate ambassadors for years to come.
+
+        </p>
+
     </div>
+
 
     <div class="p-1 w-100 rounded my-3" style="background:  linear-gradient(90deg, rgba(30,167,197,1) 1%, rgba(18,90,169,1) 20%, rgba(11,42,151,1) 50%, rgba(22,120,180,1) 80%, rgba(22,117,179,1) 80%, rgba(30,167,197,1) 100%, rgba(30,167,197,1) 100%); !important">
     </div>
-    <div class="row my-3">
-        <h3>Benefits of quizElements for lead generation</h3>
-        <p>
-            <ul class="ml-5">
-                <b>
-    
-                    Some of the benefits of using quizzes for lead generation are:
-                </b>
-                <li>
-                    Increased engagement and interaction with target audience: Quizzes are a fun and interactive way to grab the attention of your potential customers and keep them engaged with your brand. Quizzes can also encourage social sharing and word-
-                    of mouth marketing.
-                </li>
-                <br>
-
-                <li>Collection of valuable lead information: Quizzes can help you capture the contact information and segment your leads based on their answers. This can help you create a database of leads for your business and follow up with them via email or other channels.</li>
-                <br><li>Boost in brand awareness and recognition: Quizzes can help you raise awareness of your brand and generate buzz. Quizzes can also showcase your expertise and authority in your niche, and build trust and credibility with your potential customers.</li>
-                <br><li>Improved customer experience and satisfaction: Quizzes can help you provide a unique and enjoyable experience for your target audience, and deliver personalized and relevant content, product recommendations, and offers based on their quiz results. This can help you improve customer satisfaction and loyalty.</li>
-                <br><li>Increased conversions and sales: Quizzes can help you increase conversions and sales by generating qualified leads, providing personalized solutions, and creating a sense of urgency or scarcity. Quizzes can also help you reduce cart abandonment and increase repeat purchases.</li>
-                <br><li>Cost-effective method of lead generation: Quizzes can help you generate leads at a lower cost than other methods, such as paid ads or cold calling. Quizzes can also help you optimize your marketing budget by targeting only the most relevant and interested.</li>
-            </ul>
-               
-        </p>
-    </div>
-
  
+    <div class="row my-3">
+        <h2>How to conduct an exit interview survey</h2>
+        <p>
+            <b>
+                Decide what to ask:
+            </b>
+             You should prepare a set of exit interview questions that cover the main topics you want to explore, such as the employee’s reasons for leaving, their satisfaction with their job and the company, their feedback on the culture and management, their suggestions for improvement, and their future plans, You should also use open-ended questions that encourage honest and detailed answers.
 
+             <br>
+             <b>
+                 Decide what not to ask:
+                </b>
+              You should avoid asking questions that are irrelevant, inappropriate, or illegal13. For example, you should not ask about the employee’s personal life, health issues, political views, or protected characteristics (such as age, race, gender, religion, etc.). You should also not ask questions that imply criticism or blame, such as “What did you do wrong?” or "Why didn’t you perform better?".
+           
+
+        </p>
+
+    </div>
+ 
+    <div class="row my-3">
+        <h2>Common reasons why employees leave</h2>
+        <p>
+    <ul class="ml-5">
+        Employees leave their jobs for various reasons, but some are more common than others. According to different sources123, some of the most common reasons why employees leave are:
+        <br>
+        <li>Poor pay: Employees may feel underpaid or undervalued for the work they do, or they may need more money to cover their living expenses or save for their future12.</li><br>
+        <li>Lack of career advancement opportunities: Employees may want to grow and develop their skills and take on more responsibilities, but they may not find enough room for progression or learning in their current role or company.</li><br>
+        <li>Feeling disrespected at work: Employees may feel that their work is not appreciated or recognized, or that they are treated unfairly or unprofessionally by their managers or colleagues.</li><br>
+        <li>Childcare issues: Employees may have difficulties balancing their work and family obligations, especially if they have young children or dependents who need care and attention.</li><br>
+        <li>Not enough flexibility: Employees may want more flexibility in their work schedule, location, or arrangements, especially if they have personal or family commitments or preferences that require more autonomy and choice.</li><br>
+
+        <li>Poor work-life balance: Employees may feel overwhelmed or stressed by their workload, deadlines, or expectations, and they may not have enough time or energy for their personal life or hobbies.</li><br> 
+        <li>Burnout: Employees may experience physical, mental, or emotional exhaustion from their work, which can affect their health, well-being, and performance.</li><br> 
+        <li>A bad manager: Employees may have a poor relationship with their manager or supervisor, who may be unsupportive, ineffective, abusive, or micromanaging.</li><br> 
+        <li>Feeling uninspired: Employees may lose interest or passion for their work, which can affect their motivation, engagement, and productivity.</li><br> 
+        <li>Switching careers: Employees may want to pursue a different field or industry that aligns more with their interests, skills, education, or goals.</li><br> 
+        <li>Looking for a challenge: Employees may feel bored or stagnant in their current role, and they may want to find a job that offers more stimulation and variety. </li> <br>
+    </ul>
+
+        </p>
+
+    </div>
+ 
   
 
 
